2nd Last Update (BIG)
1. Collision Manager / AABB
- Fixed collision issues with platforms and player
- Added bounding walls to prevent player from walking out of map

2. Physics2D
- Balanced falling physics for player, platform and coin

3. Coin / Platforms
- Added Randomised Spawner Algorithm for both objects.
- Added life time to handle auto-destruction.

4. Player Input Controller
- Fixed issues with detecting multi-finger input.
- Buttons now react more responsive to player.

5.  Audio Manager
- Audio Manager is now a Singleton Class.
- Vibration is now working even in older platforms.
- Audio Manager can now be played even outside Game Scenes.
- More Error checking on development part.
- Added Resume, Pause and Stop functionality.

6. New Save System and Settings (Singleton)
- Score is now saved and displayed at game over.
- Audio Settings implemented to adjust volume within application.

7. UI Pages & Layouts
- Added Game Over Page
- Added Audio Settings Page
- Added Help Page
- App now launch with custom splash art and has unique icon.
- App name now displays as Trashio on Phone.

8. Optimization & Crash Fixes
- Fixed issues regarding media player memory leak.
- Fixed Game Scene properly destroying game objects on exit.
- All Game Scene Entry and Exit points now properly perform their create and destroy functions.
- Cleaned up most of the codebase.

(I finally understood how Android Studio and this framework works :OO)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,30 @@
 <resources>
-    <string name="app_name">DX1221_GuiCheng_Immanuel_220844R_234577Z</string>
+    <string name="app_name">Trashio</string>
+
+    // Splash Page Accessibility
+    <string name="splash_logo"> Logo </string>
+
+    // Main Menu Page
     <string name="game_title">Trashio</string>
     <string name="start_button_text">Play</string>
     <string name="settings_button_text">Settings</string>
     <string name="help_button_text">Help</string>
-    <string name="back">Back</string>
+
+    // Help Page
+    <string name="help_header_text">Help Page</string>
+    <string name="help_page_description_1_text">1. This game is created by: Gui Cheng and Immanuel Ng.</string>
+    <string name="help_page_description_2_text">2. Try to jump between platforms and collect as much as possible!</string>
+    <string name="help_page_description_3_text">3. The game ends where you fall to the bottom or jump too high up!</string>
+    <string name="help_back_text">Back to Menu</string>
+
+    // Settings Page
+    <string name="settings_header_text">Settings </string>
+    <string name="settings_master_bgm_text">Background (BGM):</string>
+    <string name="settings_master_sfx_text">Sound SFX:</string>
+    <string name="settings_back_text">Back to Menu</string>
+
+    // Game Over Page
+    <string name="game_over_header_text">Game Over</string>
+    <string name="game_over_back_text">Back to Menu</string>
+    <string name="game_over_score_text">Score: </string>
 </resources>
